<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiwin_demo</name>
  <version>0.0.0</version>
  <description>The hiwin_demo package</description>
  <maintainer email="hiwin_robot@hiwin.tw">HIWIN Technologies Corp</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/HIWINCorporation/hiwin_ros2.git</url>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- Dependencies required at runtime -->
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>hiwin_ra6_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>